--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  Imath-3.1.7.tar.gz: 7b17b61d5f94f5fb05842d7cadaf116cfee2babc'
+  Imath-3.1.7.tar.gz: 7b17b61d5f94f5fb05842d7cadaf116cfee2babc
